--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
         <div class="row justify-content-center mt-5">
           <div class="col-4">
             <label class="form-label" for="keyword">キーワード</label>
-            <input class="form-control" type="text" name="keyword" id="keyword" value="日" required>
+            <input class="form-control" type="text" name="keyword" id="keyword" value="" placeholder="キーワード入力してください" required>
           </div>
           <div class="col-4">
             <label class="form-label" for="beforeTextNum">前の文字数</label>
