音声データ変換後テキストの出力先のラベル名を修正

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
         
         <div class="row justify-content-center mt-5">
           <div class="col-12">
-            <label for="speechToText" class="form-label">録音のテキスト変換</label>
+            <label for="speechToText" class="form-label">音声データ変換後テキスト</label>
             <div class="speechToTextWrap">
               <textarea id="speechToText" name="searchStr" class="form-control" cols="30" rows="10" readonly></textarea>
               <div class="d-none textRoading">
